<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>eu.openanalytics</groupId>
	<artifactId>rdepot</artifactId>
	<version>2.2.0</version>
	<packaging>pom</packaging>
	<name>RDepot</name>
	<description>Enterprise Management of Package Repositories</description>
	<url>https://rdepot.io</url>
	<licenses>
		<license>
			<name>apache_v2</name>
		</license>
	</licenses>
	<organization>
		<name>Open Analytics NV</name>
		<url>https://openanalytics.eu</url>
	</organization>
	<inceptionYear>2012</inceptionYear>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<dependency.version.lombok>1.18.32</dependency.version.lombok>
	</properties>
	<distributionManagement>
		<snapshotRepository>
			<id>oa-nexus-snapshots</id>
			<name>OpenAnalytics Snapshots Repository</name>
			<url>https://nexus.openanalytics.eu/repository/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>oa-nexus-releases</id>
			<name>OpenAnalytics Release Repository</name>
			<url>https://nexus.openanalytics.eu/repository/releases</url>
		</repository>
	</distributionManagement>
	<dependencyManagement>
		<dependencies>
			<!--
			https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-actuator</artifactId>
				<version>3.2.5</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-resource-server -->
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-resource-server</artifactId>
				<version>6.2.4</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>4.4.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter</artifactId>
				<version>3.2.5</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>2.5.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.17.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api -->
			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>3.0.0</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-security</artifactId>
				<version>3.2.5</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${dependency.version.lombok}</version>
				<scope>provided</scope>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-jpa</artifactId>
				<version>3.2.5</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-hateoas -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-hateoas</artifactId>
				<version>3.2.5</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api -->
			<dependency>
				<groupId>jakarta.json</groupId>
				<artifactId>jakarta.json-api</artifactId>
				<version>2.1.3</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.eclipse.parsson/parsson -->
			<dependency>
				<groupId>org.eclipse.parsson</groupId>
				<artifactId>parsson</artifactId>
				<version>1.1.6</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client -->
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-client</artifactId>
				<version>6.2.4</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-mail</artifactId>
				<version>3.2.5</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>1.26.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.16.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.10.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>1.17.2</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>4.4</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>5.10.2</version>
				<scope>test</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>5.11.0</version>
				<scope>test</scope>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<version>3.2.5</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-test</artifactId>
				<version>6.2.4</version>
				<scope>test</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-web</artifactId>
				<version>3.2.5</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>42.7.3</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-jose -->
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-jose</artifactId>
				<version>6.2.4</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-test -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-test</artifactId>
				<version>3.2.5</version>
				<scope>test</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
			<dependency>
				<groupId>org.liquibase</groupId>
				<artifactId>liquibase-core</artifactId>
				<version>4.27.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>6.1.0-M2</version>
				<scope>provided</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>0.10.2</version>
			</dependency>
			<dependency>
				<groupId>io.rest-assured</groupId>
				<artifactId>rest-assured</artifactId>
				<version>5.4.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>4.2.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20240303</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.pdfbox</groupId>
				<artifactId>pdfbox</artifactId>
				<version>3.0.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.googlecode.json-simple</groupId>
				<artifactId>json-simple</artifactId>
				<version>1.1.1</version>
				<scope>test</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail -->
			<dependency>
				<groupId>com.sun.mail</groupId>
				<artifactId>jakarta.mail</artifactId>
				<version>2.0.1</version>
				<scope>test</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.icegreen/greenmail-junit5 -->
			<dependency>
				<groupId>com.icegreen</groupId>
				<artifactId>greenmail-junit5</artifactId>
				<version>2.0.1</version>
				<scope>test</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.5.14</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.17.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
			<dependency>
				<groupId>org.hibernate.validator</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>8.0.1.Final</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-configuration-processor</artifactId>
				<optional>true</optional>
				<version>3.2.5</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be
			moved to parent pom) -->
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<!-- see
				http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.3</version>
				</plugin>
				<plugin>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>3.2.3</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>3.2.3</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>4.3</version>
					<configuration>
						<licenseSets>
							<licenseSet>
								<header>LICENSE_HEADER</header>
								<properties>
									<year>2024</year>
								</properties>
								<excludes>
									<exclude>**/*.md</exclude>
									<exclude>**/src/test/resources/**</exclude>
									<exclude>**/src/main/resources/**</exclude>
									<exclude>**/*.yaml</exclude>
									<exclude>**/*.yml</exclude>
									<exclude>**/*.xml</exclude>
									<exclude>**/*.sh</exclude>
									<exclude>**/Dockerfile</exclude>
									<exclude>**/Jenkinsfile</exclude>
									<exclude>**/*.env</exclude>
								</excludes>
							</licenseSet>
						</licenseSets>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.owasp</groupId>
					<artifactId>dependency-check-maven</artifactId>
					<version>8.4.0</version>
					<configuration>
						<failBuildOnAnyVulnerability>false</failBuildOnAnyVulnerability>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.diffplug.spotless</groupId>
					<artifactId>spotless-maven-plugin</artifactId>
					<version>2.43.0</version>
					<configuration>
						<java>
							<palantirJavaFormat>
								<version>2.46.0</version>
								<style>PALANTIR</style>
								<formatJavadoc>false</formatJavadoc>
							</palantirJavaFormat>
						</java>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>4.8.5.0</version>
					<dependencies>
						<dependency>
							<groupId>com.github.spotbugs</groupId>
							<artifactId>spotbugs</artifactId>
							<version>4.8.5</version>
						</dependency>
					</dependencies>
					<configuration>
						<includeFilterFile>.spotbugs/spotbugs-security-include.xml</includeFilterFile>
						<excludeFilterFile>.spotbugs/spotbugs-security-exclude.xml</excludeFilterFile>
						<plugins>
							<plugin>
								<groupId>com.h3xstream.findsecbugs</groupId>
								<artifactId>findsecbugs-plugin</artifactId>
								<version>1.13.0</version>
							</plugin>
							<plugin>
								<groupId>com.mebigfatguy.sb-contrib</groupId>
								<artifactId>sb-contrib</artifactId>
								<version>7.6.4</version>
							</plugin>
						</plugins>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.21.2</version>
					<configuration>
						<failOnViolation>true</failOnViolation>
						<printFailingErrors>true</printFailingErrors>
						<rulesets>
							<ruleset>.pmd/jpinpoint-rules.xml</ruleset>
							<ruleset>io/github/dgroup/arch4u/pmd/arch4u-ruleset.xml</ruleset>
						</rulesets>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>io.github.dgroup</groupId>
							<artifactId>arch4u-pmd</artifactId>
							<version>0.2.6</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>errorprone</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.0</version>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<fork>true</fork>
							<compilerArgs>
								<arg>-XDcompilePolicy=simple</arg>
								<arg>-Xplugin:ErrorProne</arg>
								<arg>
									-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
								<arg>
									-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
								<arg>
									-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
								<arg>
									-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
								<arg>
									-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
								<arg>
									-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
								<arg>
									-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
								<arg>
									-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
								<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
								<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
							</compilerArgs>
							<annotationProcessorPaths>
								<path>
									<groupId>com.google.errorprone</groupId>
									<artifactId>error_prone_core</artifactId>
									<version>2.27.1</version>
								</path>
								<path>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
									<version>${dependency.version.lombok}</version>
								</path>
							</annotationProcessorPaths>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>
	<modules>
		<module>rdepot-app</module>
		<module>rdepot-base</module>
		<module>rdepot-r-module</module>
		<module>rdepot-python-module</module>
		<module>rdepot-repo</module>
	</modules>
</project>
